@@ -3,6 +3,7 @@ Revision history for Game-Theory-TwoPersonMatrix
 {{$NEXT}}
     - Added tests for mixed().
     - Added the player_strategy() method, tests and docs.
+    - Added expected_value()
 
 0.04  2014-11-18
     - Re-added mixed() and Math::Calculus::* deps.
